--- a/apache/000-default.conf
+++ b/apache/000-default.conf
@@ -10,7 +10,7 @@
 
     <Directory "/var/www/html/admin">
         AuthBasicProvider dbd
-        AuthDBDUserPWQuery "SELECT password FROM auth WHERE login = %s"
+        AuthDBDUserPWQuery "SELECT password FROM users WHERE login = %s"
     </Directory>
 
 </VirtualHost>
