--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,11 @@ services:
       - "3307:3307"
   apache:
     container_name: apache
-    build: ./apache
-    restart: always
-    command: "/bin/sh -c 'apt-get update && 
-      pecl uninstall redis &&
-      pecl install -f redis &&
-      docker-php-ext-enable redis &&
-      docker-php-ext-install mysqli && 
-      exec apache2-foreground'"
+    build: apache
     volumes:
       - ./apache/pages:/var/www/html/
-      - ./apache/000-default.conf:/etc/apache2/sites-available/000-default.conf
       - ./apache/pages/static:/var/www/uploads/
+    restart: always
     ports:
       - "8081:80"
     links:
