--- a/apache/000-default.conf
+++ b/apache/000-default.conf
@@ -1,12 +1,17 @@
 <VirtualHost *:80>
     ServerName apache
     ServerAdmin admin@admin
+    DocumentRoot /var/www/html
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     DBDriver mysql
     DBDParams "host=db port=3306 dbname=appDB user=admin pass=admin"
+    DBDMin 4
+    DBDKeep 8
+    DBDMax 20
+    DBDExptime 300
 
     <Directory "/var/www/html/admin">
         AuthBasicProvider dbd
@@ -14,3 +19,4 @@
     </Directory>
 
 </VirtualHost>
+
