--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,5 +6,8 @@ http {
         location ~ \.php {
             proxy_pass http://apache;
         }
+        location ~ \.png {
+                    proxy_pass http://apache;
+        }
     }
 }
