--- a/apache/000-default.conf
+++ b/apache/000-default.conf
@@ -5,17 +5,15 @@
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
-
     DBDriver mysql
     DBDParams "host=db port=3306 dbname=appDB user=admin pass=admin"
     DBDMin 4
     DBDKeep 8
     DBDMax 20
     DBDExptime 300
-
-    <Directory "/var/www/html/admin">
+    <Directory /var/www/html>
         AuthBasicProvider dbd
-        AuthDBDUserPWQuery "SELECT password FROM users WHERE login = %s"
+        AuthDBDUserPWQuery "select password from users where name = %s"
     </Directory>
 
 </VirtualHost>
