--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,23 +12,23 @@ services:
       - "3307:3307"
   apache:
     container_name: apache
-    build: apache
-    volumes:
-      - ./apache/pages:/var/www/html/
-      - ./apache/pages/static:/var/www/uploads/
-    restart: always
+    build:
+      context: ./apache
+      dockerfile: Dockerfile
     ports:
       - "8081:80"
     links:
       - db
       - nginx
       - redis
+    volumes:
+      - ./apache/src:/var/www/html/
   nginx:
     container_name: nginx
     image: "nginx:latest"
     restart: always
     volumes:
-      - ./nginx/pages:/etc/nginx/html/
+      - ./nginx/src:/etc/nginx/html/
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "8080:80"
