--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,12 +2,28 @@ events {
 }
 
 http {
-    server {
-        location ~ \.php {
-            proxy_pass http://apache;
-        }
-        location ~ \.png {
-                    proxy_pass http://apache;
-        }
-    }
+  include mime.types;
+      server {
+          listen       80;
+          #IPv6 addresses (0.7.36) are specified in square brackets:
+          listen  [::]:80;
+          server_name  localhost;
+          root   /usr/share/nginx/html;
+          index  index.html index.htm;
+
+          location / {
+              try_files $uri $uri/ @redirect;
+          }
+
+
+          location @redirect {
+              proxy_set_header Host php-apache:8081;
+              proxy_pass http://php-apache:8081;
+          }
+
+          error_page   500 502 503 504  /50x.html;
+          location = /50x.html {
+              root   /usr/share/nginx/html-s;
+          }
+      }
 }
